# Computer-Graphics-Practices

./: README.md
0-GraphicsWarmUP/: CMakeLists.txt  Square.cpp
0-GraphicsWarmUP/glad/: glad.h
1-ImageProcessing/src/: image.cpp
2-raytracer/: CMakeLists.txt  aabb.h  bvhnode.h  hitable.h  hitablelist.h  light.h  main.cpp  plane.h  sphere.h  testui.py  triangle.h
2-raytracer/dependency/: image.cpp  image.h  ray.h  vec3.h
2-raytracer/scenefile/: cube.scn  cube1.scn  dragon.scn  outdoor.scn  triangle.scn
3-OpenGL-Crash/: ModelLoad.cpp
4-3Dgame/: CMakeLists.txt  Camera.cpp  Camera.h  Character.cpp  Character.h  Coord2D.cpp  Coord2D.h  Material.cpp  Material.h  Util.cpp  Util.h  Vec3D.cpp  Vec3D.h  WO_Door.cpp  WO_Door.h  WO_Enemy.cpp  WO_Enemy.h  WO_Goal.cpp  WO_Goal.h  WO_Key.cpp  WO_Key.h  WO_Start.cpp  WO_Start.h  WO_Wall.cpp  WO_Wall.h  World.cpp  World.h  WorldObject.cpp  WorldObject.h  main.cpp
4-3Dgame/SceneFiles/: 10x10.txt  2door+2key.txt  2key_test.txt  debug.txt  door+key.txt  nodoors.txt  side_walls.txt  side_walls3x3.txt
4-3Dgame/Shaders/: phong.frag  phong.glsl  phong.vert  phongTex.frag  phongTex.vert  phongfrag.glsl
4-3Dgame/glad/: CMakeLists.txt
4-3Dgame/models/: tmp.txt
